--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <header class="header">
   <a href="#" class="logo">
-    <img src="images/logo.png" alt="">
+    <img src="logo.png" alt="">
 
   
 <nav class="navbar">
@@ -53,7 +53,7 @@
    
    <div class="cart-items">
      <span class="fas fa-times"></span>
-     <img src="images/cart-item-1.png" alt="item">
+     <img src="cart-item-1.png" alt="item">
      <div class="content">
        <h3> Cart item 01</h3>
        <div class="price">$15.99/-</div>
@@ -62,7 +62,7 @@
   
       <div class="cart-items">
         <span class="fas fa-times"></span>
-        <img src="images/cart-item-2.png" alt="item">
+        <img src="cart-item-2.png" alt="item">
         <div class="content">
           <h3> Cart item 02</h3>
           <div class="price">$15.99/-</div>
