--- a/index.html
+++ b/index.html
@@ -274,14 +274,14 @@
     <div class="box">
       <img src="quote-img.png" alt="" class="quote">
       <p> lorem ipsum dolar sit amet consectetur adipisicing elit .Animi nulla sit libre nemo fuga sequit nobis? necessitiesa aut labour nisi quas eaque laudantium.</p>
-      <img src="images/pic-1.png" class="user" alt="">
+      <img src="pic-1.png" class="user" alt="">
       <h3>Avi Sharma</h3>
     </div>
     
         <div class="box">
       <img src="quote-img.png" alt="" class="quote">
       <p> lorem ipsum dolar sit amet consectetur adipisicing elit .Animi nulla sit libre nemo fuga sequit nobis? necessitiesa aut labour nisi quas eaque laudantium.</p>
-      <img src="images/pic-2.png" class="user" alt="">
+      <img src="pic-2.png" class="user" alt="">
       <h3>Prachi khatri</h3>
     </div>
     
